--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
+doctype html
+
 html
   head
-    title='TED All Hands'
+    title TED All Hands
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
   body
     div.container
