--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ html
     div.container
       div.jumbotron
         h1 Hello TED!!!
-        h2 Current host: #{hostname}
+        h2!= hostname
  
  script.
 
