--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,13 @@ html
     div.container
       div.jumbotron
         h1 Hello TED!!!
+        p
+        a(href="https://github.com/OguzPastirmaci/vsts-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > Visual Studio Team Services > Docker Hub > Tutum > Azure", target="_blank") Deploy using VSTS
+        p
+        a(href="https://github.com/OguzPastirmaci/circleci-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > CircleCI > Docker Hub > Tutum > Azure", target="_blank") Deploy using CircleCI
+        p
+
+
  
  script.
 
