--- a/views/index.jade
+++ b/views/index.jade
@@ -9,9 +9,9 @@ html
       div.jumbotron
         h1 Hello TED!!!
         p
-        h2 a(href="https://github.com/OguzPastirmaci/vsts-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > Visual Studio Team Services > Docker Hub > Tutum > Azure", target="_blank") How to deploy using VSTS
+        a(href="https://github.com/OguzPastirmaci/vsts-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > Visual Studio Team Services > Docker Hub > Tutum > Azure", target="_blank") How to deploy using VSTS
         p
-        h2 a(href="https://github.com/OguzPastirmaci/circleci-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > CircleCI > Docker Hub > Tutum > Azure", target="_blank") How to deploy using CircleCI
+        a(href="https://github.com/OguzPastirmaci/circleci-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > CircleCI > Docker Hub > Tutum > Azure", target="_blank") How to deploy using CircleCI
         p
 
 
