--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
   body
     div.container
       div.jumbotron
-        h1 Hello TED!
+        h1 Hello TED!!
         p
         a(href="https://github.com/OguzPastirmaci/vsts-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > Visual Studio Team Services > Docker Hub > Tutum > Azure", target="_blank") How to deploy using VSTS
         p
