Edited page to show hostname

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,18 +2,12 @@ doctype html
 
 html
   head
-    title TED All Hands
+    title Hello
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
   body
     div.container
       div.jumbotron
-        h1 Hello TED!!!!!
-        p
-        a(href="https://github.com/OguzPastirmaci/vsts-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > Visual Studio Team Services > Docker Hub > Tutum > Azure", target="_blank") How to deploy using VSTS
-        p
-        a(href="https://github.com/OguzPastirmaci/circleci-dockerhub-tutum-azure", title="Sample Node.js app to demo GitHub > CircleCI > Docker Hub > Tutum > Azure", target="_blank") How to deploy using CircleCI
-        p
-
+        h1 This page is served by: #{hostname}
 
  
  script.
