--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 
 html
   head
-    title Hello TechReady!
+    title Hello TechReady!!
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
   body
     div.container
