--- a/views/index.jade
+++ b/views/index.jade
@@ -2,12 +2,12 @@ doctype html
 
 html
   head
-    title Merhaba Istanbul Azure Meetup!
+    title Merhaba Istanbul Azure Meetup!!!!!
     link(rel='stylesheet', href='http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
   body
     div.container
       div.jumbotron
-        h1 Merhaba Istanbul Azure Meetup! This page was served by: #{hostname}
+        h1 Merhaba Istanbul Azure Meetup!!!!! This page was served by: #{hostname}
 
  
  script.
