--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ html
   body
     div.container
       div.jumbotron
-        h1 Hello Tokyo! This page was served by: #{hostname}
+        h1 Hello! This page was served by: #{hostname}
 
  
  script.
